@@ -2,6 +2,7 @@
 	- Fix that windows DHCP hook fires less often: only if list of network
 	  and GUID of adapter and IPs changes.
 	- unbound-control execute hook.
+	- reshook for windows.
 
 7 Sep 2011: Wouter
 	- dnssec-triggerd can run as a windows service.
